kubernetes/apps/flux-system/headlamp/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Observability
    gethomepage.dev/name: Headlamp
    gethomepage.dev/icon: headlamp.png
    gethomepage.dev/description: Kubernetes Web UI
spec:
  ingressClassName: internal
  rules:
    - host: headlamp.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headlamp
                port:
                  number: 80
